Fixes resource signature